# pytoon-codec

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  RELEASING.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
benchmarks/: __init__.py  benchmark_toon_codec.py  generate_payloads.py
docs/: api.md  index.md
examples/: llm_integration_generic.py  llm_integration_openai.py  nested_events_basic.py  time_series_basic.py
examples/notebooks/: README.md  pytoon_codec_intro.ipynb
src/pytoon-codec/: pytoon_codec.py
src/pytoon_codec/: __init__.py  pytoon_codec.py
tests/: perf_baseline.json  test_codec_additional.py  test_integration_mixed_payloads.py  test_integration_payloads.py  test_integration_timeseries_and_events.py  test_nested_and_dotted_paths.py  test_primitive_arrays.py  test_regression_formatting_and_quotes.py  test_regression_performance_smoke.py  test_regression_whitespace_and_blank_lines.py  test_scalars_and_primitives.py  test_tables.py  test_toon_nested_flatten_and_expand.py  test_toon_primitive_arrays.py  test_toon_scalars_and_primitives.py  test_toon_tables_schema_and_rows.py
