[tool.poetry]
name = "pytoon-codec"
version = "0.1.0"
description = "A compact TOON encoder/decoder for time series and nested event logs, tuned for LLM prompts."
authors = ["Diogo Ribeiro <dfr@esmad.ipp.pt>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "pytoon_codec", from = "src" }
]
homepage = "https://github.com/diogoribeiro7/pytoon-codec"
repository = "https://github.com/diogoribeiro7/pytoon-codec"
keywords = ["TOON", "LLM", "serialization", "time-series", "events", "token-efficiency"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
ruff = "^0.14.5"
mypy = "^1.13.0"
pre-commit = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

# ============================================================================
# Ruff Configuration
# ============================================================================
[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "B008",  # do not perform function calls in argument defaults (pytest fixtures)
]

[tool.ruff.lint.isort]
known-first-party = ["pytoon_codec"]

# ============================================================================
# Mypy Configuration
# ============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Global default
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytoon_codec.*"
disallow_untyped_defs = true
